--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -2,20 +2,27 @@ li{
     list-style:none;
 }
 textarea{
-    resize: vertical;
-    min-height: 75vh;
-    max-height: 80vh;
+    resize: none !important;;
+    border:1px black solid;
 }
 .block{
     margin: 0 auto !important;
 }
 footer{
-    position:fixed !important;
-    bottom:0 !important;
+
     border:solid 3px black;
 }
 html, body , #root{
-    position:relative;
+
     height: 100% !important;
 
+}
+.preview {
+border:1px solid blue;
+display: block !important;
+height: 100% !important;
+
+}
+section{
+    height:90% !important;
 }
