--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -1,28 +1,23 @@
 li{
     list-style:none;
 }
-textarea{
-    resize: none !important;;
-    border:1px black solid;
-}
 .block{
     margin: 0 auto !important;
 }
 footer{
-
+    position:fixed !important;
+    bottom:0 !important;
     border:solid 3px black;
 }
 html, body , #root{
-
-    height: 100% !important;
-
+    position:relative;
+    height: 90% !important;
 }
 .preview {
 border:1px solid blue;
 display: block !important;
 height: 100% !important;
-
 }
 section{
-    height:90% !important;
+    height:100% !important;
 }
