--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -9,7 +9,6 @@ li {
 footer {
   position: fixed !important;
   bottom: 0 !important;
-  border: solid 3px black;
 }
 
 html, body, #root {
@@ -29,5 +28,11 @@ html, body, #root {
 
 section {
   height: 100% !important;
+}
+
+svg {
+  height: 1rem;
+  margin-left: 0.2rem;
+  margin-right: 0.2rem;
 }
 /*# sourceMappingURL=App.css.map */
